readme and small fixes

--- a/options/options.html
+++ b/options/options.html
@@ -19,7 +19,7 @@
 
         <br/>
         <div class="section">
-            <h2 class="accent-text">add a new shortcut</h2>
+            <h2 class="accent-text">add a new shortcut<span class="help">&nbsp;(quick add guide:&nbsp;<a target="_blank" class="help link" href="https://github.com/hitakritgoplani/salesforce-accelerator/blob/master/README.MD">readme first</a>)</span></h2>
             <div class="add-shortcut-form">
                 <input type="text" id="new-key" maxlength="1" placeholder="Key (a-z)" class="holo-input">
                 <input type="text" id="new-name" placeholder="Name" class="holo-input">
