--- a/options/options.html
+++ b/options/options.html
@@ -25,9 +25,14 @@
                 <select id="new-picklist-value" class="holo-input">
                     <option value="" disabled selected>Select an option</option>
                     <option value="Setup">Setup</option>
+                    <option value="Object Manager">Object Manager</option>
+                    <option value="Permission Sets">Permission Sets</option>
+                    <option value="Permission Set Groups">Permission Set Groups</option>
+                    <option value="Profiles">Profiles</option>
+                    <option value="Custom Permissions">Custom Permissions</option>
+                    <option value="Users">Users</option>
                     <option value="Flows">Flows</option>
                     <option value="Dev Console">Dev Console</option>
-                    <option value="Object Manager">Object Manager</option>
                 </select>
                 <button id="add-shortcut-button" class="holo-button save-button"><strong>add</strong></button>
             </div>
