--- a/options/options.html
+++ b/options/options.html
@@ -19,20 +19,12 @@
 
         <br/>
         <div class="section">
-            <h2 class="accent-text">add a new shortcut<span class="help">&nbsp;(quick add guide:&nbsp;<a target="_blank" class="help link" href="https://github.com/hitakritgoplani/salesforce-accelerator/blob/master/README.MD">readme first</a>)</span></h2>
+            <h2 class="accent-text">add a new shortcut</h2>
             <div class="add-shortcut-form">
                 <input type="text" id="new-key" maxlength="1" placeholder="Key (a-z)" class="holo-input">
                 <select id="new-picklist-value" class="holo-input">
                     <option value="" disabled selected>Select an option</option>
-                    <option value="Setup">Setup</option>
-                    <option value="Object Manager">Object Manager</option>
-                    <option value="Permission Sets">Permission Sets</option>
-                    <option value="Permission Set Groups">Permission Set Groups</option>
-                    <option value="Profiles">Profiles</option>
-                    <option value="Custom Permissions">Custom Permissions</option>
-                    <option value="Users">Users</option>
-                    <option value="Flows">Flows</option>
-                    <option value="Dev Console">Dev Console</option>
+                    
                 </select>
                 <button id="add-shortcut-button" class="holo-button save-button"><strong>add</strong></button>
             </div>
